Fixed Modal Alignment

--- a/styles/modal.css
+++ b/styles/modal.css
@@ -1,7 +1,8 @@
 .modal {
   opacity: 0;
   transition: opacity 0.6s ease;
-  pointer-events: none; /* prevent clicks when hidden */
+  pointer-events: none;
+  /* prevent clicks when hidden */
   position: fixed;
   z-index: 9999;
   left: 50%;
@@ -22,30 +23,38 @@
 }
 
 .modal .close-button {
-    position: absolute;
-    width: 5%;
-    height: 5%;
-    top: 20px;
-    right: 20px;
-    font-size: 24px;
-    color: white;
-    background-color: var(--container-bg);
-    border-radius: 10px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
-    font: var(--font);
-    font-weight: 700;
-    cursor: pointer;
+  position: absolute;
+  width: 5%;
+  height: 5%;
+  top: 20px;
+  right: 20px;
+  font-size: 24px;
+  color: white;
+  background-color: var(--container-bg);
+  border-radius: 10px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+  font: var(--font);
+  font-weight: 700;
+  cursor: pointer;
 }
 
 .modal .close-button:hover {
-    background-color: var(--button-hover-bg);
+  background-color: var(--button-hover-bg);
 }
 
 .timerModal {
   display: none;
+  justify-content: center;
+  align-items: center;
+    flex-direction: column;
 
 }
 
+
 .editNameModal {
-  display : none;
+  display: none;
+  justify-content: center;
+  align-items: center;
+    flex-direction: column;
+
 }
